fixed alignment of text boxes and length of range slider.

--- a/laramore_michele_project4/stylesheet/style.css
+++ b/laramore_michele_project4/stylesheet/style.css
@@ -170,11 +170,18 @@ input[type=button] {
 fieldset {
 	width: 90%;	
 	}
+
+li{
+	text-indent: -35px;
+	}
 	
 #comments {  
-    width: 90%;
+    width: 100%;
 	height: 100px;    
     } 	
+	
+#spend {
+	width: 160px;
 }
 
 
